--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand"
+    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand",
+    "server": "nodemon index.js"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
     "jest": "^27.3.1",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "nodemon": "^2.0.14"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LambdaSchool/node-api1-project.git"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "nanoid": "^3.1.30"
   }
 }
